<resources>
    <string name="app_name">To_Do_Matrix</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Ziro">0</string>

    <string name="Dot">.</string>
    <string name="Slash">/</string>
    <string name="Star">*</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="Total">=</string>
    <string name="AC">AC</string>
    <string name="Del">DEL</string>
    <string name="Default">0</string>


</resources>